<resources>
    <string name="app_name">whereyou</string>
    <string name="btn_ok">OK</string>
    <string name="default_notification_channel_id">244530538356</string>
    <string name="email">EMAIL</string>
    <string name="phone">MOBILE #</string>
    <string name="name">FULL NAME</string>
    <string name="password">PASSWORD</string>
    <string name="signin">SIGN IN</string>
    <string name="signup">SIGN UP</string>
    <string name="fb">LOGIN WITH FACEBOOK</string>
    <string name="google">LOGIN WITH GOOGLE</string>
    <string name="facebook_app_id">185716295518629</string>
    <string name="fb_login_protocol_scheme">fb185716295518629</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="title_activity_main">Home</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="title_activity_splash_screen">SplashScreen</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
</resources>
