<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context="com.techease.whereyou.ui.fragments.LoginFragment">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/whereyou" />

    <belka.us.androidtoggleswitch.widgets.ToggleSwitch
        android:id="@+id/signintoggle"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="17sp"
        custom:activeBgColor="@color/colorAccent"
        custom:activeTextColor="@color/colorPrimary"
        custom:cornerRadius="10dp"
        custom:inactiveBgColor="@color/colorPrimaryDark"
        custom:inactiveTextColor="@color/colorPrimary"
        custom:separatorColor="#FFF"
        custom:textToggleLeft="@string/signup"
        custom:textToggleRight="@string/signin"
        custom:toggleWidth="100dp" />

    <EditText
        android:id="@+id/et_signin_email"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginLeft="30sp"
        android:layout_marginRight="30sp"
        android:layout_marginTop="50sp"
        android:backgroundTint="@color/colorAccentLight"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:shadowColor="@color/colorAccentLight"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/colorAccentLight" />

    <EditText
        android:id="@+id/et_signin_password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginLeft="30sp"
        android:layout_marginRight="30sp"
        android:layout_marginTop="10sp"
        android:backgroundTint="@color/colorAccentLight"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:shadowColor="@color/colorAccentLight"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/colorAccentLight" />

    <ImageButton
        android:id="@+id/signin_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:background="@color/colorPrimary"
        android:src="@drawable/next" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10sp"
        android:text="OR"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/signin_btnFb"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:layout_marginTop="10dp"
        android:background="@color/colorAccent"
        android:drawableLeft="@drawable/facebook_logo"
        android:drawablePadding="15sp"
        android:paddingLeft="10sp"
        android:paddingRight="10sp"
        android:text="@string/fb"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark" />

    <Button
        android:id="@+id/signin_btnGoogle"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:layout_marginTop="10dp"
        android:background="@color/colorAccent"
        android:drawableLeft="@drawable/google"
        android:drawablePadding="15sp"
        android:paddingLeft="10sp"
        android:paddingRight="10sp"
        android:text="@string/google"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark" />

</LinearLayout>
